Network/network_template1.yaml
    AWSTemplateFormatVersion: '2010-09-09'
    Description: ElasticsearchDomain resource
    Resources:
      ELKServerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupDescription: allow connections from specified CIDR ranges
          SecurityGroupIngress:
           - IpProtocol: tcp
             FromPort: 80
             ToPort: 80
             CidrIp: 0.0.0.0/0
           - IpProtocol: tcp
             FromPort: 22
             ToPort: 22
             CidrIp: 0.0.0.0/0
      myInternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
          Tags:
           - Key: stack
             Value: Development
             
      GatewayToInternet:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId: !Ref VPC 
          InternetGatewayId: !Ref myInternetGateway
          
      VPC:
        Type: 'AWS::EC2::VPC'
        Properties:
         CidrBlock: 10.0.0.0/16    
      Subnet1:
        Type: 'AWS::EC2::Subnet'
        Properties:  
          VpcId: !Ref VPC
          CidrBlock: 10.0.0.0/24
          AvailabilityZone: us-east-1a   
      Subnet2:
        Type: 'AWS::EC2::Subnet'
        Properties:  
          VpcId: !Ref VPC
          CidrBlock: 10.0.1.0/24
          AvailabilityZone: us-east-1b
          
      myRouteTable:
       Type: AWS::EC2::RouteTable
       Properties:
         VpcId: !Ref VPC
         
      myRoute:
       Type: AWS::EC2::Route
       DependsOn: GatewayToInternet
       Properties:
         RouteTableId: !Ref myRouteTable
         DestinationCidrBlock: 0.0.0.0/0
         GatewayId: !Ref myInternetGateway
        
      mySubnetRouteTableAssociation1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref Subnet1 
          RouteTableId: !Ref myRouteTable
          
      mySubnetRouteTableAssociation2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref Subnet2 
          RouteTableId: !Ref myRouteTable
        
    Outputs:
      StackSSHSecurityGroup:
        Description: The SSH Security Group for our Company
        Value: !GetAtt ELKServerSecurityGroup.GroupId
